清理多余文件